@@ -1,12 +1,0 @@
-music.arispace = lbm/arispace.ogg
-music.battle = lbm/battle.ogg
-music.hyper = lbm/hyper.ogg
-music.orbit1 = ipanims/orbit1.ogg
-music.orbit2 = ipanims/orbit2.ogg
-music.orbit3 = ipanims/orbit3.ogg
-music.orbit4 = ipanims/orbit4.ogg
-music.orbit5 = ipanims/orbit5.ogg
-music.outfit = lbm/outfit.ogg
-music.shipyard = lbm/shipyard.ogg
-music.space = ipanims/space.ogg
-music.starbase = lbm/starbase.ogg
