@@ -1,0 +1,13 @@
+music.arispace = addons/3domusic/arispace.ogg
+music.battle = addons/3domusic/battle.ogg
+music.hyper = addons/3domusic/hyper.ogg
+music.orbit1 = addons/3domusic/orbit1.ogg
+music.orbit2 = addons/3domusic/orbit2.ogg
+music.orbit3 = addons/3domusic/orbit3.ogg
+music.orbit4 = addons/3domusic/orbit4.ogg
+music.orbit5 = addons/3domusic/orbit5.ogg
+music.outfit = addons/3domusic/outfit.ogg
+music.shipyard = addons/3domusic/shipyard.ogg
+music.space = addons/3domusic/space.ogg
+music.starbase = addons/3domusic/starbase.ogg
+music.credits = addons/3domusic/credits.ogg
