@@ -438,13 +438,13 @@
 260 263   2 graphics.yeg__sml
 261  12   6 music.battle
 262 264   2 credits.background
-282  13   6 credits.creditsmusic
+282  13   6 music.credits
 283 284   2 graphics.sisskeleton
 284 285   2 graphics.orbenter
 285 286   2 graphics.setupmenu
 285 287   4 text.setupmenu
-286  98   4 ship.slides/intro.text
-287  99   4 ship.slides/ending.text
+286  98   4 slides.intro
+287  99   4 slides.ending
 288   5   3 credits.font.pt13
 288   6   3 credits.font.pt17
 288   7   3 credits.font.pt45
